# ct202315

./: .gitignore  README.html  README.md  ct202315.cabal  hie.yaml
app/: Main.hs
src/: Decoder.hs  Puzzle.hs  Solver.hs
src/Solver/: Fast.hs  Slow.hs
