cabal-version:      3.8
name:               ct202315

version:            0.1.0.0

build-type:         Simple

common warnings
    ghc-options: -Wall -O

library
    -- Import common warning flags.
    import:           warnings

    -- Modules exported by the library.
    exposed-modules:  Puzzle,
                      Solver.Slow,
                      Solver.Fast,
                      Decoder

    -- Other library packages from which modules are imported.
    build-depends:    base ^>=4.17.0.0,
                      containers,
                      extra

    -- Directories containing source files.
    hs-source-dirs:   src

    -- Base language which the package is written in.
    default-language: Haskell2010

executable ct202315
    -- Import common warning flags.
    import:           warnings

    -- .hs or .lhs file containing the Main module.
    main-is:          Main.hs

    -- Other library packages from which modules are imported.
    build-depends:    base ^>=4.17.0.0,
                      ct202315

    -- Directories containing source files.
    hs-source-dirs:   app

    -- Base language which the package is written in.
    default-language: Haskell2010
